@@ -18,21 +18,13 @@ package org.javarosa.core.model;
 
 import java.io.DataInputStream;
 import java.io.DataOutputStream;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.FileOutputStream;
 import java.io.IOException;
-import java.io.OutputStreamWriter;
-import java.io.UnsupportedEncodingException;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.Enumeration;
 import java.util.HashMap;
-import java.util.HashSet;
-import java.util.NoSuchElementException;
-import java.util.Set;
 import java.util.List;
+import java.util.NoSuchElementException;
 
 import org.javarosa.core.log.WrappedException;
 import org.javarosa.core.model.condition.Condition;
@@ -64,11 +56,10 @@ import org.javarosa.core.util.externalizable.ExtWrapListPoly;
 import org.javarosa.core.util.externalizable.ExtWrapMap;
 import org.javarosa.core.util.externalizable.ExtWrapNullable;
 import org.javarosa.core.util.externalizable.PrototypeFactory;
-import org.javarosa.debug.EvaluationResult;
-import org.javarosa.debug.Event;
-import org.javarosa.debug.EventNotifier;
-import org.javarosa.debug.EventNotifierSilent;
+import org.javarosa.form.api.FormEntryController;
+import org.javarosa.form.api.FormEntryModel;
 import org.javarosa.model.xform.XPathReference;
+import org.javarosa.xform.parse.XFormParserReporter;
 import org.javarosa.xform.util.XFormAnswerDataSerializer;
 import org.javarosa.xpath.XPathException;
 
@@ -84,76 +75,21 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
    public static final int TEMPLATING_RECURSION_LIMIT = 10;
 
    public enum EvalBehavior {
-      Latest_fastest,
-      Latest_safest,
-      April_2014,
-      Legacy
-   }
+      Legacy, 
+      April_2014, 
+      Safe_2014,
+      Fast_2014
+   };
 
-   public static final EvalBehavior recommendedMode = EvalBehavior.Latest_fastest;
+   public static final EvalBehavior recommendedMode = EvalBehavior.Safe_2014;
 
    // used by FormDef() constructor
    private static EvalBehavior defaultMode = recommendedMode;
-   private static EventNotifier defaultEventNotifier = new EventNotifierSilent();
-
+   
    // call this to change the mode used for evaluations.
    public static final void setEvalBehavior(EvalBehavior mode) {
       defaultMode = mode;
    }
-
-   public static void setDefaultEventNotifier(EventNotifier eventNotifier) {
-      defaultEventNotifier = eventNotifier;
-   }
-
-   public static Comparator<QuickTriggerable> quickTriggerablesRootOrdering = new Comparator<QuickTriggerable>() {
-
-      @Override
-      public int compare(QuickTriggerable lhs, QuickTriggerable rhs) {
-         Triggerable lhst = lhs.t;
-         Triggerable rhst = rhs.t;
-         int cmp = Triggerable.triggerablesRootOrdering.compare(lhst, rhst);
-         return cmp;
-      }
-   };
-
-   /**
-    * Triggerable implementations have a deep equals() comparison operator. Once
-    * the DAG is built, we only need a shallow compare since we are not creating
-    * any new Triggerable objects.
-    * 
-    * This class serves that purpose.
-    * 
-    * @author mitchellsundt@gmail.com
-    *
-    */
-   public static final class QuickTriggerable {
-
-      public final Triggerable t;
-      private Integer hashCode = null;
-
-      @Override
-      public final int hashCode() {
-         if (hashCode == null) {
-            hashCode = System.identityHashCode(t);
-         }
-         return hashCode;
-      }
-
-      @Override
-      public final boolean equals(Object obj) {
-         if (obj instanceof QuickTriggerable) {
-            QuickTriggerable other = (QuickTriggerable) obj;
-            return other.t == t;
-         }
-         return false;
-      }
-
-      QuickTriggerable(Triggerable t) {
-         this.t = t;
-      }
-   }
-
-   private EvalBehavior mode = recommendedMode;
 
    private List<IFormElement> children;// <IFormElement>
    /** A collection of group definitions. */
@@ -169,30 +105,15 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     * A unique external name that is used to identify the form between machines
     */
    private Localizer localizer;
-   private ArrayList<QuickTriggerable> triggerablesDAG; // this list is
-                                                        // topologically
-                                                        // ordered, meaning for
-                                                        // any tA and tB in
-   // the list, where tA comes before tB, evaluating tA cannot depend on any
-   // result from evaluating tB
-   private boolean triggerablesInOrder; // true if triggerables has been ordered
-                                        // topologically (DON'T DELETE ME EVEN
-                                        // THOUGH I'M UNUSED)
 
-   private List<IConditionExpr> outputFragments; // <IConditionExpr> contents
-                                                   // of <output>
+   // <IConditionExpr> contents of <output>
    // tags that serve as parameterized
    // arguments to captions
-
-   public HashMap<TreeReference, HashSet<QuickTriggerable>> triggerIndex; // <TreeReference,
-                                                                          // Vector<Triggerable>>
-   private HashMap<TreeReference, QuickTriggerable> conditionRepeatTargetIndex; // <TreeReference,
-                                                                                // Condition>;
-   // associates repeatable
-   // nodes with the Condition
-   // that determines their
-   // relevancy
-   public EvaluationContext exprEvalContext;
+   private List<IConditionExpr> outputFragments; 
+   
+   private IDag dagImpl;
+   
+   private EvaluationContext exprEvalContext;
 
    private QuestionPreloader preloader = new QuestionPreloader();
 
@@ -206,47 +127,46 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
 
    private HashMap<String, List<Action>> eventListeners;
 
-   private EventNotifier eventNotifier;
-
    public FormDef() {
-      this(defaultMode, defaultEventNotifier);
+      this(defaultMode);
    }
    
    /**
 	 *
 	 */
-   public FormDef(EvalBehavior mode, EventNotifier eventNotifier) {
+   public FormDef(EvalBehavior mode) {
       setID(-1);
       setChildren(null);
-      this.mode = mode;
-      triggerablesDAG = new ArrayList<QuickTriggerable>();
-      triggerablesInOrder = true;
-      triggerIndex = new HashMap<TreeReference, HashSet<QuickTriggerable>>();
+      switch ( mode ) {
+      case Legacy:
+    	  dagImpl = new LegacyDagImpl();
+    	  break;
+      case April_2014:
+    	  dagImpl = new April2014DagImpl();
+    	  break;
+      case Safe_2014:
+    	  dagImpl = new Safe2014DagImpl();
+    	  break;
+      case Fast_2014:
+    	  dagImpl = new Fast2014DagImpl();
+    	  break;
+      default:
+      }
       // This is kind of a wreck...
-      setEvaluationContext(new EvaluationContext(null));
+      resetEvaluationContext();
       outputFragments = new ArrayList<IConditionExpr>();
       submissionProfiles = new HashMap<String, SubmissionProfile>();
       formInstances = new HashMap<String, FormInstance>();
       eventListeners = new HashMap<String, List<Action>>();
       extensions = new ArrayList<XFormExtension>();
-
-      this.eventNotifier = eventNotifier;
-   }
-
-   public EventNotifier getEventNotifier() {
-      return eventNotifier;
-   }
-
-   public void setEventNotifier(EventNotifier eventNotifier) {
-      this.eventNotifier = eventNotifier;
    }
 
    /**
-    * Getters and setters for the vectors tha
+    * Getters and setters for the lists
     */
    public void addNonMainInstance(FormInstance instance) {
       formInstances.put(instance.getName(), instance);
-      this.setEvaluationContext(new EvaluationContext(null));
+      resetEvaluationContext();
    }
 
    /**
@@ -281,7 +201,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
    public void setInstance(FormInstance fi) {
       mainInstance = fi;
       fi.setFormId(getID());
-      this.setEvaluationContext(new EvaluationContext(null));
+      resetEvaluationContext();
       attachControlsToInstanceData();
    }
 
@@ -309,7 +229,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
 
    public IFormElement getChild(int i) {
       if (i < this.children.size())
-         return (IFormElement) this.children.get(i);
+         return this.children.get(i);
 
       throw new ArrayIndexOutOfBoundsException("FormDef: invalid child index: " + i + " only "
             + children.size() + " children");
@@ -325,7 +245,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
    }
 
    /**
-    * Dereference the form index and return a Vector of all interstitial nodes
+    * Dereference the form index and return a List of all interstitial nodes
     * (top-level parent first; index target last)
     *
     * Ignore 'new-repeat' node for now; just return/stop at ref to
@@ -335,9 +255,9 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     * @return
     */
    public List<IFormElement> explodeIndex(FormIndex index) {
-      List<Integer> indexes = new ArrayList<Integer>();
-      List<Integer> multiplicities = new ArrayList<Integer>();
-      List<IFormElement> elements = new ArrayList<IFormElement>();
+	   List<Integer> indexes = new ArrayList<Integer>();
+	   List<Integer> multiplicities = new ArrayList<Integer>();
+	   List<IFormElement> elements = new ArrayList<IFormElement>();
 
       collapseIndex(index, indexes, multiplicities, elements);
       return elements;
@@ -350,9 +270,9 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     * @return
     */
    public TreeReference getChildInstanceRef(FormIndex index) {
-      List<Integer> indexes = new ArrayList<Integer>();
-      List<Integer> multiplicities = new ArrayList<Integer>();
-      List<IFormElement> elements = new ArrayList<IFormElement>();
+	   List<Integer> indexes = new ArrayList<Integer>();
+	   List<Integer> multiplicities = new ArrayList<Integer>();
+	   List<IFormElement> elements = new ArrayList<IFormElement>();
 
       collapseIndex(index, indexes, multiplicities, elements);
       return getChildInstanceRef(elements, multiplicities);
@@ -367,9 +287,10 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
       if (elements.size() == 0)
          return null;
 
+      IFormElement element = elements.get(elements.size()-1);
       // get reference for target element
       TreeReference ref = FormInstance.unpackReference(
-            ((IFormElement) elements.get(elements.size() - 1)).getBind()).clone();
+            element.getBind()).clone();
       for (int i = 0; i < ref.size(); i++) {
          // There has to be a better way to encapsulate this
          if (ref.getMultiplicity(i) != TreeReference.INDEX_ATTRIBUTE) {
@@ -379,11 +300,11 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
 
       // fill in multiplicities for repeats along the way
       for (int i = 0; i < elements.size(); i++) {
-         IFormElement temp = (IFormElement) elements.get(i);
+         IFormElement temp = elements.get(i);
          if (temp instanceof GroupDef && ((GroupDef) temp).getRepeat()) {
             TreeReference repRef = FormInstance.unpackReference(temp.getBind());
             if (repRef.isParentOf(ref, false)) {
-               int repMult = (Integer) multiplicities.get(i);
+               int repMult = multiplicities.get(i);
                ref.setMultiplicity(repRef.size() - 1, repMult);
             } else {
                return null; // question/repeat hierarchy is not consistent
@@ -419,11 +340,11 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
 
    public void setValue(IAnswerData data, TreeReference ref, TreeElement node,
          boolean trustPreviousValue, boolean cascadeToGroupChildren) {
-      if (mode == EvalBehavior.Legacy || mode == EvalBehavior.April_2014 || mode == EvalBehavior.Latest_safest) {
-         getEventNotifier().publishEvent(new Event("New answer", new EvaluationResult(ref, data)));
+      if (dagImpl.getEvalBehavior() == EvalBehavior.Legacy ||
+          dagImpl.getEvalBehavior() == EvalBehavior.April_2014 ||
+          dagImpl.getEvalBehavior() == EvalBehavior.Safe_2014) {
          setAnswer(data, node);
-         Set<QuickTriggerable> qts = triggerTriggerables(ref, cascadeToGroupChildren, new HashSet<QuickTriggerable>(0));
-         publishSummary("New value by force", ref, qts);
+         triggerTriggerables(ref, cascadeToGroupChildren);
       } else {
          // SCTO-2286 : Do not act if the data haven't changed.
          // Use the serialized form of the data to avoid type conversions and
@@ -433,10 +354,8 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
          if (!trustPreviousValue
                || !objectEquals(answerDataSerializer.serializeAnswerData(oldValue),
                      answerDataSerializer.serializeAnswerData(data))) {
-            getEventNotifier().publishEvent(new Event("New answer", new EvaluationResult(ref, data)));
             setAnswer(data, node);
-            Set<QuickTriggerable> qts = triggerTriggerables(ref, cascadeToGroupChildren, new HashSet<QuickTriggerable>(0));
-            publishSummary("New value conditionally", ref, qts);
+            triggerTriggerables(ref, cascadeToGroupChildren);
          }
       }
       // TODO: pre-populate fix-count repeats here?
@@ -494,16 +413,16 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     * @return
     */
    public FormIndex deleteRepeat(FormIndex index) {
-      List<Integer> indexes = new ArrayList<Integer>();
-      List<Integer> multiplicities = new ArrayList<Integer>();
-      List<IFormElement> elements = new ArrayList<IFormElement>();
+	  List<Integer> indexes = new ArrayList<Integer>();
+	  List<Integer> multiplicities = new ArrayList<Integer>();
+	  List<IFormElement> elements = new ArrayList<IFormElement>();
       collapseIndex(index, indexes, multiplicities, elements);
 
       // loop backwards through the elements, removing objects from each
-      // vector, until we find a repeat
+      // list, until we find a repeat
       // TODO: should probably check to make sure size > 0
       for (int i = elements.size() - 1; i >= 0; i--) {
-         IFormElement e = (IFormElement) elements.get(i);
+         IFormElement e = elements.get(i);
          if (e instanceof GroupDef && ((GroupDef) e).getRepeat()) {
             break;
          } else {
@@ -537,12 +456,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
          }
       }
 
-      Set<QuickTriggerable> alreadyEvaluated = triggerTriggerables(deleteRef, true, new HashSet<QuickTriggerable>(0));
-      publishSummary("Deleted", index.getReference(), alreadyEvaluated);
-
-      if (mode != EvalBehavior.Legacy && mode != EvalBehavior.April_2014) {
-         evaluateChildrenTriggerables(deleteElement, false, true, alreadyEvaluated);
-      }
+      dagImpl.deleteRepeatGroup(getMainInstance(), getEvaluationContext(), deleteRef, parentElement, deleteElement);
 
       return newIndex;
    }
@@ -565,34 +479,15 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
          a.processAction(this, destRef);
       }
 
-      Set<QuickTriggerable> qtSet1 = triggerTriggerables(destRef, true, new HashSet<QuickTriggerable>(0));// trigger conditions that depend on the creation of this new node
-      publishSummary("Created (phase 1)", destRef, qtSet1);
-
-      Set<QuickTriggerable> qtSet2 = initializeTriggerables(destRef, true);// initialize conditions for the node (and sub-nodes)
-      publishSummary("Created (phase 2)", destRef, qtSet2);
-
-      if (mode != EvalBehavior.Legacy && mode != EvalBehavior.April_2014) {
-         Set<QuickTriggerable> alreadyEvaluated = new HashSet<QuickTriggerable>(qtSet1);
-         alreadyEvaluated.addAll(qtSet2);
-
-         evaluateChildrenTriggerables(newNode, true, true, alreadyEvaluated);
-      }
-   }
-
-   private void evaluateChildrenTriggerables(TreeElement newNode, boolean createdOrDeleted, boolean cascadeToGroupChildren, Set<QuickTriggerable> alreadyEvaluated) {
-      //iterate into the group children and evaluate any triggerables that depend one them, if they are not already calculated.
-      int numChildren = newNode.getNumChildren();
-      for (int i = 0; i < numChildren; i++) {
-         TreeReference anchorRef = newNode.getChildAt(i).getRef();
-         Set<QuickTriggerable> childTriggerables = triggerTriggerables(anchorRef, cascadeToGroupChildren, alreadyEvaluated);
-         publishSummary((createdOrDeleted ? "Created" : "Deleted"), anchorRef, childTriggerables);
-      }
+      TreeReference parentRef = destRef.getParentRef();
+      TreeElement parentElement = mainInstance.resolveReference(parentRef);
+      dagImpl.createRepeatGroup(getMainInstance(), getEvaluationContext(), destRef, parentElement, newNode);
    }
 
    public boolean isRepeatRelevant(TreeReference repeatRef) {
       boolean relev = true;
 
-      QuickTriggerable qc = conditionRepeatTargetIndex.get(repeatRef.genericize());
+      QuickTriggerable qc = dagImpl.getTriggerableForRepeatGroup(repeatRef.genericize());
       if (qc != null) {
          Condition c = (Condition) qc.t;
          relev = c.evalBool(mainInstance, new EvaluationContext(exprEvalContext, repeatRef));
@@ -657,17 +552,20 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
       TreeReference destRef = itemset.getDestRef().contextualize(targetRef);
 
       List<Selection> selections = null;
-      List<String> selectedValues = new ArrayList<String>();
       if (data instanceof SelectMultiData) {
          selections = (List<Selection>) data.getValue();
       } else if (data instanceof SelectOneData) {
          selections = new ArrayList<Selection>(1);
          selections.add((Selection) data.getValue());
       }
+      List<String> selectedValues;
       if (itemset.valueRef != null) {
+         selectedValues = new ArrayList<String>(selections.size());
          for (int i = 0; i < selections.size(); i++) {
             selectedValues.add(selections.get(i).choice.getValue());
          }
+      } else {
+    	  selectedValues = new ArrayList<String>(0);
       }
 
       // delete existing dest nodes that are not in the answer selection
@@ -709,22 +607,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
             getMainInstance().copyItemsetNode(ch.copyNode, destRef, this);
          }
       }
-
-      Set<QuickTriggerable> qtSet1 = triggerTriggerables(destRef, cascadeToGroupChildren, new HashSet<QuickTriggerable>(0));// trigger conditions that depend on the creation of these new nodes
-      publishSummary("Copied itemset answer for " + targetRef.toString(true) + " (phase 1)", qtSet1);
-
-      Set<QuickTriggerable> qtSet2 = initializeTriggerables(destRef, cascadeToGroupChildren);// initialize conditions for the node (and sub-nodes)
-      publishSummary("Copied itemset answer for " + targetRef.toString(true) + " (phase 2)", qtSet2);
-      //not 100% sure this will work since destRef is ambiguous as the last step, but i think it's supposed to work
-   }
-
-   public QuickTriggerable findTriggerable(Triggerable t) {
-      for (QuickTriggerable qt : triggerablesDAG) {
-         if (t.equals(qt.t)) {
-            return qt;
-         }
-      }
-      return null;
+      dagImpl.copyItemsetAnswer(getMainInstance(), getEvaluationContext(), destRef, targetNode, cascadeToGroupChildren);
    }
 
    /**
@@ -734,52 +617,19 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     *           the condition to be set
     */
    public Triggerable addTriggerable(Triggerable t) {
-      QuickTriggerable qt = findTriggerable(t);
-      if (qt != null) {
-         // one node may control access to many nodes; this means many nodes
-         // effectively have the same condition
-         // let's identify when conditions are the same, and store and calculate
-         // it only once
-
-         // nov-2-2011: ctsims - We need to merge the context nodes together
-         // whenever we do this (finding the highest
-         // common ground between the two), otherwise we can end up failing to
-         // trigger when the ignored context
-         // exists and the used one doesn't
-
-         Triggerable existingTriggerable = qt.t;
-
-         existingTriggerable.changeContextRefToIntersectWithTriggerable(t);
-         triggerablesInOrder = false;
-
-         return existingTriggerable;
-
-         // note, if the contextRef is unnecessarily deep, the condition will be
-         // evaluated more times than needed
-         // perhaps detect when 'identical' condition has a shorter contextRef,
-         // and use that one instead?
-
-      } else {
-         qt = new QuickTriggerable(t);
-         triggerablesDAG.add(qt);
-         triggerablesInOrder = false;
-
-         Set<TreeReference> triggers = t.getTriggers();
-         for (TreeReference trigger : triggers) {
-            HashSet<QuickTriggerable> triggered = triggerIndex.get(trigger);
-            if (triggered == null) {
-               triggered = new HashSet<QuickTriggerable>();
-               triggerIndex.put(trigger.clone(), triggered);
-            }
-            if (!triggered.contains(qt)) {
-               triggered.add(qt);
-            }
-         }
-
-         return t;
-      }
+      return dagImpl.addTriggerable(t);
    }
 
+   /**
+    * Report any dependency cycles based upon the triggerIndex array.
+    * (Does not require that the DAG be finalized).
+    * 
+    * @param reporter
+    */
+   public void reportDependencyCycles (XFormParserReporter reporter) {
+      dagImpl.reportDependencyCycles(reporter);
+   }
+   
    /**
     * Finalize the DAG associated with the form's triggered conditions. This
     * will create the appropriate ordering and dependencies to ensure the
@@ -794,244 +644,16 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
       // DAGify the triggerables based on dependencies and sort them so that
       // triggerables come only after the triggerables they depend on
       //
-
-      ArrayList<QuickTriggerable> vertices = new ArrayList<QuickTriggerable>(triggerablesDAG);
-      triggerablesDAG.clear();
-      ArrayList<QuickTriggerable[]> partialOrdering = new ArrayList<QuickTriggerable[]>();
-      HashSet<QuickTriggerable> deps = new HashSet<QuickTriggerable>();
-      HashSet<QuickTriggerable> newDestinationSet = new HashSet<QuickTriggerable>();
-      for (QuickTriggerable qt : vertices) {
-         deps.clear();
-         newDestinationSet.clear();
-         fillTriggeredElements(qt, deps, newDestinationSet, true);
-
-         // remove any self-reference if we have one...
-         deps.remove(qt);
-         for (QuickTriggerable qu : deps) {
-            QuickTriggerable[] edge = { qt, qu };
-            partialOrdering.add(edge);
-         }
-
-         // save for aggressive 2014 behavior
-         qt.t.setImmediateCascades(deps);
-      }
-
-      ArrayList<QuickTriggerable> orderedRoots = new ArrayList<QuickTriggerable>();
-      HashSet<QuickTriggerable> roots = new HashSet<QuickTriggerable>(vertices.size());
-      int waveCount = -1;
-      while (vertices.size() > 0) {
-         ++waveCount;
-         // determine root nodes
-         roots.clear();
-         roots.addAll(vertices);
-         for (int i = 0; i < partialOrdering.size(); i++) {
-            QuickTriggerable[] edge = partialOrdering.get(i);
-            roots.remove(edge[1]);
-         }
-
-         // if no root nodes while graph still has nodes, graph has cycles
-         if (roots.size() == 0) {
-            String hints = "";
-            for (QuickTriggerable qt : vertices) {
-               for (TreeReference r : qt.t.getTargets()) {
-                  hints += "\n" + r.toString(true);
-               }
-            }
-            String message = "Cycle detected in form's relevant and calculation logic!";
-            if (!hints.equals("")) {
-               message += "\nThe following nodes are likely involved in the loop:" + hints;
-            }
-            throw new IllegalStateException(message);
-         }
-
-         // order the root nodes - mainly for clean textual diffs when printing
-         // When this code is rewritten to use HashSet, this will become
-         // important.
-         orderedRoots.clear();
-         orderedRoots.addAll(roots);
-         Collections.sort(orderedRoots, quickTriggerablesRootOrdering);
-
-         // remove root nodes and edges originating from them
-         // add them to the triggerablesDAG.
-         for (int i = 0; i < orderedRoots.size(); i++) {
-            QuickTriggerable root = orderedRoots.get(i);
-            root.t.setWaveCount(waveCount);
-            triggerablesDAG.add(root);
-            vertices.remove(root);
-         }
-         for (int i = partialOrdering.size() - 1; i >= 0; i--) {
-            QuickTriggerable[] edge = partialOrdering.get(i);
-            if (roots.contains(edge[0]))
-               partialOrdering.remove(i);
-         }
-      }
-
-      triggerablesInOrder = true;
-
-      //
-      // build the condition index for repeatable nodes
-      //
-
-      conditionRepeatTargetIndex = new HashMap<TreeReference, QuickTriggerable>();
-      for (int i = 0; i < triggerablesDAG.size(); i++) {
-         QuickTriggerable qt = triggerablesDAG.get(i);
-         if (qt.t instanceof Condition) {
-            ArrayList<TreeReference> targets = qt.t.getTargets();
-            for (int j = 0; j < targets.size(); j++) {
-               TreeReference target = (TreeReference) targets.get(j);
-               if (mainInstance.getTemplate(target) != null) {
-                  conditionRepeatTargetIndex.put(target, qt);
-               }
-            }
-         }
-      }
-
-//      printTriggerables();
-   }
-
-   /**
-    * For debugging - note that path assumes Android device
-    */
-   void printTriggerables() {
-      OutputStreamWriter w = null;
-      try {
-         w = new OutputStreamWriter(new FileOutputStream(new File("/sdcard/odk/trigger.log")),
-               "UTF-8");
-         for (int i = 0; i < triggerablesDAG.size(); i++) {
-            QuickTriggerable qt = triggerablesDAG.get(i);
-            w.write(Integer.toString(i) + ": ");
-            qt.t.print(w);
-         }
-      } catch (UnsupportedEncodingException e) {
-         e.printStackTrace();
-      } catch (FileNotFoundException e) {
-         e.printStackTrace();
-      } catch (IOException e) {
-         e.printStackTrace();
-      } finally {
-         if (w != null) {
-            try {
-               w.flush();
-               w.close();
-            } catch (IOException e) {
-               e.printStackTrace();
-            }
-         }
-      }
-   }
-
-   /**
-    * Get all of the elements which will need to be evaluated (in order) when
-    * the triggerable is fired.
-    * 
-    * @param qt
-    * @param destinationSet
-    *           where to store the triggerables
-    * @param cascadeToGroupChildren
-    *           if true, then the slow code will execute, if false, then
-    *           old/fast code will execute that suffers from
-    *           https://code.google.com/p/opendatakit/issues/detail?id=888
-    */
-   public void fillTriggeredElements(QuickTriggerable qt,
-                                     Set<QuickTriggerable> destinationSet,
-                                     Set<QuickTriggerable> newDestinationSet,
-                                     boolean cascadeToGroupChildren) {
-      if (qt.t.canCascade()) {
-         if (mode == EvalBehavior.Legacy || (mode == EvalBehavior.Latest_fastest && !cascadeToGroupChildren)) {
-            for (int j = 0; j < qt.t.getTargets().size(); j++) {
-               TreeReference target = qt.t.getTargets().get(j);
-               HashSet<QuickTriggerable> triggered = triggerIndex.get(target);
-               if (triggered != null) {
-                  for (QuickTriggerable qu : triggered) {
-                     if (!destinationSet.contains(qu)) {
-                        destinationSet.add(qu);
-                        newDestinationSet.add(qu);
-                     }
-                  }
-               }
-            }
-         } else {
-            boolean expandRepeatables = mode != EvalBehavior.Legacy && mode != EvalBehavior.April_2014;
-
-            for (int j = 0; j < qt.t.getTargets().size(); j++) {
-               TreeReference target = (TreeReference) qt.t.getTargets().get(j);
-               Set<TreeReference> updatedNodes = new HashSet<TreeReference>();
-               updatedNodes.add(target);
-
-               // For certain types of triggerables, the update will affect not
-               // only
-               // the target, but
-               // also the children of the target. In that case, we want to add
-               // all
-               // of those nodes
-               // to the list of updated elements as well.
-               if (qt.t.isCascadingToChildren()) {
-                  addChildrenOfReference(target, updatedNodes, expandRepeatables);
-               }
-
-               // Now go through each of these updated nodes (generally just 1
-               // for a
-               // normal calculation,
-               // multiple nodes if there's a relevance cascade.
-               for (TreeReference ref : updatedNodes) {
-                  // Check our index to see if that target is a Trigger for
-                  // other
-                  // conditions
-                  // IE: if they are an element of a different calculation or
-                  // relevancy calc
-
-                  // We can't make this reference generic before now or we'll
-                  // lose the
-                  // target information,
-                  // so we'll be more inclusive than needed and see if any of
-                  // our
-                  // triggers are keyed on
-                  // the predicate-less path of this ref
-                  HashSet<QuickTriggerable> triggered = triggerIndex.get(ref.hasPredicates() ? ref
-                        .removePredicates() : ref);
-
-                  if (triggered != null) {
-                     // If so, walk all of these triggerables that we found
-                     for (QuickTriggerable qu : triggered) {
-                        // And add them to the queue if they aren't there
-                        // already
-                        if (!destinationSet.contains(qu)) {
-                           destinationSet.add(qu);
-                           newDestinationSet.add(qu);
-                        }
-                     }
-                  }
-               }
-            }
-         }
-      }
-   }
-
-   public Set<QuickTriggerable> initializeTriggerables() {
-      return initializeTriggerables(TreeReference.rootRef(), false);
+	  dagImpl.finalizeTriggerables(getMainInstance(), getEvaluationContext());
    }
 
    /**
     * Walks the current set of conditions, and evaluates each of them with the
     * current context.
     */
-   private Set<QuickTriggerable> initializeTriggerables(TreeReference rootRef,
-                                                        boolean cascadeToGroupChildren) {
-      TreeReference genericRoot = rootRef.genericize();
-
-      Set<QuickTriggerable> applicable = new HashSet<QuickTriggerable>();
-      for (int i = 0; i < triggerablesDAG.size(); i++) {
-         QuickTriggerable qt = triggerablesDAG.get(i);
-         for (int j = 0; j < qt.t.getTargets().size(); j++) {
-            TreeReference target = qt.t.getTargets().get(j);
-            if (genericRoot.isParentOf(target, false)) {
-               applicable.add(qt);
-               break;
-            }
-         }
-      }
-
-      return evaluateTriggerables(applicable, rootRef, cascadeToGroupChildren, new HashSet<QuickTriggerable>(0));
+   private void initializeTriggerables(TreeReference rootRef, boolean cascadeToGroupChildren) {
+	   
+	 dagImpl.initializeTriggerables(getMainInstance(), getEvaluationContext(), rootRef, cascadeToGroupChildren);
    }
 
    /**
@@ -1041,184 +663,16 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     *           The full contextualized unambiguous reference of the value that
     *           was changed.
     */
-   public Set<QuickTriggerable> triggerTriggerables(TreeReference ref, boolean cascadeToGroupChildren, Set<QuickTriggerable> alreadyEvaluated) {
-
-      // turn unambiguous ref into a generic ref
-      // to identify what nodes should be triggered by this
-      // reference changing
-      TreeReference genericRef = ref.genericize();
-
-      // get triggerables which are activated by the generic reference
-      HashSet<QuickTriggerable> triggered = triggerIndex.get(genericRef);
-      if (triggered == null) {
-         return alreadyEvaluated;
-      }
-
-      Set<QuickTriggerable> triggeredCopy = new HashSet<QuickTriggerable>(triggered);
-
-      // Evaluate all of the triggerables in our new vector
-      return evaluateTriggerables(triggeredCopy, ref, cascadeToGroupChildren, alreadyEvaluated);
+   public void triggerTriggerables(TreeReference ref, boolean cascadeToGroupChildren) {
+	  dagImpl.triggerTriggerables(getMainInstance(), getEvaluationContext(), ref, cascadeToGroupChildren);
    }
+   
+   public ValidateOutcome validate(boolean markCompleted) {
 
-   /**
-    * Step 2 in evaluating DAG computation updates from a value being changed in
-    * the instance. This step is responsible for taking the root set of directly
-    * triggered conditions, identifying which conditions should further be
-    * triggered due to their update, and then dispatching all of the
-    * evaluations.
-    *  @param tv
-    *           A vector of all of the trigerrables directly triggered by the
-    *           value changed
-    * @param anchorRef
-    */
-   private Set<QuickTriggerable> evaluateTriggerables(Set<QuickTriggerable> tv, TreeReference anchorRef,
-                                                      boolean cascadeToGroupChildren, Set<QuickTriggerable> alreadyEvaluated) {
-      // add all cascaded triggerables to queue
+      FormEntryModel formEntryModelToBeValidated = new FormEntryModel(this);
+      FormEntryController formEntryControllerToBeValidated = new FormEntryController(formEntryModelToBeValidated);
 
-      // Iterate through all of the currently known triggerables to be triggered
-      Set<QuickTriggerable> refSet = new HashSet<QuickTriggerable>(tv);
-      for (; !refSet.isEmpty();) {
-         Set<QuickTriggerable> newSet = new HashSet<QuickTriggerable>();
-         for (QuickTriggerable qt : refSet) {
-            if (mode == EvalBehavior.Legacy || mode == EvalBehavior.April_2014 || mode == EvalBehavior.Latest_fastest) {
-               fillTriggeredElements(qt, tv, newSet, cascadeToGroupChildren);
-            } else if (mode == EvalBehavior.Latest_safest) {
-               // leverage the saved DAG edges.
-               // This may over-fill the set of triggerables.
-               // but should be faster than recomputing the edges.
-               // with value-change optimizations, this should be
-               // much faster.
-               for (QuickTriggerable qu : qt.t.getImmediateCascades()) {
-                  if (!tv.contains(qu)) {
-                     tv.add(qu);
-                     newSet.add(qu);
-                  }
-               }
-            }
-         }
-         refSet = newSet;
-      }
-
-      // tv should now contain all of the triggerable components which are going
-      // to need to be addressed
-      // by this update.
-      // 'triggerables' is topologically-ordered by dependencies, so evaluate
-      // the triggerables in 'tv'
-      // in the order they appear in 'triggerables'
-      Set<QuickTriggerable> fired = new HashSet<QuickTriggerable>();
-
-      List<TreeReference> firedAnchors = new ArrayList<TreeReference>();
-
-      for (QuickTriggerable qt : triggerablesDAG) {
-         if (tv.contains(qt) && !alreadyEvaluated.contains(qt)) {
-
-            TreeReference contextAnchor = anchorRef;
-
-            TreeReference affectedTrigger = qt.t.findAffectedTrigger(firedAnchors);
-            if (affectedTrigger != null) {
-               contextAnchor = affectedTrigger;
-            }
-
-            List<EvaluationResult> evaluationResults = evaluateTriggerable(qt, contextAnchor);
-
-            if (evaluationResults.size() > 0) {
-               fired.add(qt);
-
-               for (EvaluationResult evaluationResult : evaluationResults) {
-                  TreeReference affectedRef = evaluationResult.getAffectedRef();
-                  if (!firedAnchors.contains(affectedRef)) {
-                     firedAnchors.add(affectedRef);
-                  }
-               }
-            }
-
-
-            fired.add(qt);
-         }
-      }
-
-      return fired;
-   }
-
-   /**
-    * Step 3 in DAG cascade. evaluate the individual triggerable expressions
-    * against the anchor (the value that changed which triggered recomputation)
-    *  @param qt
-    *           The triggerable to be updated
-    * @param anchorRef
-    */
-   private List<EvaluationResult> evaluateTriggerable(QuickTriggerable qt, TreeReference anchorRef) {
-
-      // Contextualize the reference used by the triggerable against the anchor
-      TreeReference contextRef = qt.t.contextualizeContextRef(anchorRef);
-      try {
-
-         // Now identify all of the fully qualified nodes which this triggerable
-         // updates. (Multiple nodes can be updated by the same trigger)
-         List<TreeReference> qualifiedList = exprEvalContext.expandReference(contextRef);
-
-         List<EvaluationResult> evaluationResults = new ArrayList<EvaluationResult>(0);
-
-         // Go through each one and evaluate the trigger expresion
-         for (TreeReference qualified : qualifiedList) {
-            EvaluationContext ec = new EvaluationContext(exprEvalContext, qualified);
-            evaluationResults.addAll(qt.t.apply(mainInstance, ec, qualified, this));
-         }
-
-         boolean fired = evaluationResults.size() > 0;
-         if (fired) {
-            getEventNotifier().publishEvent(new Event(qt.t.getClass().getSimpleName(), evaluationResults));
-         }
-
-         return evaluationResults;
-      } catch (Exception e) {
-         throw new WrappedException("Error evaluating field '" + contextRef.getNameLast() + "': "
-               + e.getMessage(), e);
-      }
-   }
-
-   /**
-    * This is a utility method to get all of the references of a node. It can be
-    * replaced when we support dependent XPath Steps (IE: /path/to//)
-    */
-   public void addChildrenOfReference(TreeReference original, Set<TreeReference> toAdd,
-         boolean expandRepeatables) {
-      // original has already been added to the 'toAdd' list.
-
-      TreeElement repeatTemplate = expandRepeatables ? mainInstance.getTemplatePath(original)
-            : null;
-      if (repeatTemplate != null) {
-         for (int i = 0; i < repeatTemplate.getNumChildren(); ++i) {
-            TreeElement child = repeatTemplate.getChildAt(i);
-            toAdd.add(child.getRef().genericize());
-            addChildrenOfElement(child, toAdd, expandRepeatables);
-         }
-      } else {
-         List<TreeReference> refSet = exprEvalContext.expandReference(original);
-         for (TreeReference ref : refSet) {
-            addChildrenOfElement(exprEvalContext.resolveReference(ref), toAdd, expandRepeatables);
-         }
-      }
-   }
-
-   // Recursive step of utility method
-   private void addChildrenOfElement(TreeElement el, Set<TreeReference> toAdd,
-         boolean expandRepeatables) {
-      TreeElement repeatTemplate = expandRepeatables ? mainInstance.getTemplatePath(el.getRef())
-            : null;
-      if (repeatTemplate != null) {
-         for (int i = 0; i < repeatTemplate.getNumChildren(); ++i) {
-            TreeElement child = repeatTemplate.getChildAt(i);
-            toAdd.add(child.getRef().genericize());
-            addChildrenOfElement(child, toAdd, expandRepeatables);
-         }
-      } else {
-         for (int i = 0; i < el.getNumChildren(); ++i) {
-            TreeElement child = el.getChildAt(i);
-            toAdd.add(child.getRef().genericize());
-            addChildrenOfElement(child, toAdd, expandRepeatables);
-         }
-      }
+      return dagImpl.validate(formEntryControllerToBeValidated, markCompleted );
    }
 
    public boolean evaluateConstraint(TreeReference ref, IAnswerData data) {
@@ -1236,18 +690,15 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
       ec.isConstraint = true;
       ec.candidateValue = data;
 
-      boolean result = c.constraint.eval(mainInstance, ec);
-
-      getEventNotifier().publishEvent(new Event("Constraint", new EvaluationResult(ref, new Boolean(result))));
-
-      return result;
+      return c.constraint.eval(mainInstance, ec);
    }
 
    /**
     * @param ec
     *           The new Evaluation Context
     */
-   public void setEvaluationContext(EvaluationContext ec) {
+   private void resetEvaluationContext() {
+	  EvaluationContext ec = new EvaluationContext(null);
       ec = new EvaluationContext(mainInstance, formInstances, ec);
       initEvalContext(ec);
       this.exprEvalContext = ec;
@@ -1330,7 +781,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
                   String questionXpath = (String) args[1];
                   TreeReference ref = RestoreUtils.xfFact.ref(questionXpath);
 
-                  QuestionDef q = f.findQuestionByRef(ref, f);
+                  QuestionDef q = findQuestionByRef(ref, f);
                   if (q == null
                         || (q.getControlType() != Constants.CONTROL_SELECT_ONE && q
                               .getControlType() != Constants.CONTROL_SELECT_MULTI)) {
@@ -1423,7 +874,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
 
    public String fillTemplateString(String template, TreeReference contextRef,
          HashMap<String, ?> variables) {
-      HashMap args = new HashMap();
+      HashMap<String,String> args = new HashMap<String,String>();
 
       int depth = 0;
       List<String> outstandingArgs = Localizer.getArgs(template);
@@ -1476,12 +927,10 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     *           used to determine the values to be chosen from.
     */
    public void populateDynamicChoices(ItemsetBinding itemset, TreeReference curQRef) {
-      getEventNotifier().publishEvent(new Event("Dynamic choices", new EvaluationResult(curQRef, null)));
-
-      List<SelectChoice> choices = new ArrayList<SelectChoice>();
+	   List<SelectChoice> choices = new ArrayList<SelectChoice>();
 
       List<TreeReference> matches = itemset.nodesetExpr.evalNodeset(this.getMainInstance(),
-              new EvaluationContext(exprEvalContext, itemset.contextRef.contextualize(curQRef)));
+            new EvaluationContext(exprEvalContext, itemset.contextRef.contextualize(curQRef)));
 
       FormInstance fi = null;
       if (itemset.nodesetRef.getInstanceName() != null) // We're not dealing
@@ -1577,7 +1026,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     * org.javarosa.core.model.utils.Localizer)
     */
    public void localeChanged(String locale, Localizer localizer) {
-      for (IFormElement child : children) {
+	  for (IFormElement child : children) {
          child.localeChanged(locale, localizer);
       }
    }
@@ -1679,7 +1128,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
       setID(ExtUtil.readInt(dis));
       setName(ExtUtil.nullIfEmpty(ExtUtil.readString(dis)));
       setTitle((String) ExtUtil.read(dis, new ExtWrapNullable(String.class), pf));
-      setChildren((List) ExtUtil.read(dis, new ExtWrapListPoly(), pf));
+      setChildren((List<IFormElement>) ExtUtil.read(dis, new ExtWrapListPoly(), pf));
       setInstance((FormInstance) ExtUtil.read(dis, FormInstance.class, pf));
 
       setLocalizer((Localizer) ExtUtil.read(dis, new ExtWrapNullable(Localizer.class), pf));
@@ -1694,7 +1143,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
       }
       finalizeTriggerables();
 
-      outputFragments = (List) ExtUtil.read(dis, new ExtWrapListPoly(), pf);
+      outputFragments = (List<IConditionExpr>) ExtUtil.read(dis, new ExtWrapListPoly(), pf);
 
       submissionProfiles = (HashMap<String, SubmissionProfile>) ExtUtil.read(dis, new ExtWrapMap(
             String.class, SubmissionProfile.class));
@@ -1705,9 +1154,9 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
       eventListeners = (HashMap<String, List<Action>>) ExtUtil.read(dis, new ExtWrapMap(
             String.class, new ExtWrapListPoly()), pf);
 
-      extensions = (List) ExtUtil.read(dis, new ExtWrapListPoly(), pf);
+      extensions = (List<XFormExtension>) ExtUtil.read(dis, new ExtWrapListPoly(), pf);
 
-      setEvaluationContext(new EvaluationContext(null));
+      resetEvaluationContext();
    }
 
    /**
@@ -1738,16 +1187,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
          dispatchFormEvent(Action.EVENT_XFORMS_READY);
       }
 
-      Set<QuickTriggerable> quickTriggerables = initializeTriggerables();
-      publishSummary("Form initialized", quickTriggerables);
-   }
-
-   private void publishSummary(String lead, Set<QuickTriggerable> quickTriggerables) {
-      publishSummary(lead, null, quickTriggerables);
-   }
-
-   private void publishSummary(String lead, TreeReference ref, Set<QuickTriggerable> quickTriggerables) {
-      getEventNotifier().publishEvent(new Event(lead + ": " + (ref != null ? ref.toShortString() + ": " : "") + quickTriggerables.size() + " triggerables were fired."));
+      initializeTriggerables(TreeReference.rootRef(), false);
    }
 
    /**
@@ -1765,16 +1205,9 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
       ExtUtil.write(dos, getMainInstance());
       ExtUtil.write(dos, new ExtWrapNullable(localizer));
 
-      List<Condition> conditions = new ArrayList<Condition>();
-      List<Recalculate> recalcs = new ArrayList<Recalculate>();
-      for (QuickTriggerable qt : triggerablesDAG) {
-         Triggerable t = qt.t;
-         if (t instanceof Condition) {
-            conditions.add((Condition) t);
-         } else if (t instanceof Recalculate) {
-            recalcs.add((Recalculate) t);
-         }
-      }
+      List<Condition> conditions = dagImpl.getConditions();
+      List<Recalculate> recalcs = dagImpl.getRecalculates();
+
       ExtUtil.write(dos, new ExtWrapList(conditions));
       ExtUtil.write(dos, new ExtWrapList(recalcs));
 
@@ -1798,9 +1231,9 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
          int i = index.getLocalIndex();
          element = element.getChild(i);
 
-         indexes.add(new Integer(i));
-         multiplicities.add(new Integer(index.getInstanceIndex() == -1 ? 0 : index
-                 .getInstanceIndex()));
+         indexes.add(Integer.valueOf(i));
+         multiplicities.add(Integer.valueOf(index.getInstanceIndex() == -1 ? 0 : index
+               .getInstanceIndex()));
          elements.add(element);
 
          index = index.getNextLevel();
@@ -1820,12 +1253,12 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
       }
 
       for (int i = indexes.size() - 1; i >= 0; i--) {
-         int ix = (Integer) indexes.get(i);
-         int mult = (Integer) multiplicities.get(i);
+         int ix = indexes.get(i);
+         int mult = multiplicities.get(i);
 
          // ----begin unclear why this is here... side effects???
          // TODO: ... No words. Just fix it.
-         IFormElement ife = (IFormElement) elements.get(i);
+         IFormElement ife = elements.get(i);
          XPathReference xpr = (ife != null) ? (XPathReference) ife.getBind() : null;
          TreeReference ref = (xpr != null) ? (TreeReference) xpr.getReference() : null;
          // ----end
@@ -1842,9 +1275,9 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
    }
 
    public int getNumRepetitions(FormIndex index) {
-      List<Integer> indexes = new ArrayList<Integer>();
-      List<Integer> multiplicities = new ArrayList<Integer>();
-      List<IFormElement> elements = new ArrayList<IFormElement>();
+	  List<Integer> indexes = new ArrayList<Integer>();
+	  List<Integer> multiplicities = new ArrayList<Integer>();
+	  List<IFormElement> elements = new ArrayList<IFormElement>();
 
       if (!index.isInForm()) {
          throw new RuntimeException("not an in-form index");
@@ -1882,7 +1315,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
          }
       }
 
-      multiplicities.set(multiplicities.size() - 1, new Integer(repIndex));
+      multiplicities.set(multiplicities.size() - 1, Integer.valueOf(repIndex));
 
       return buildIndex(indexes, multiplicities, elements);
    }
@@ -1895,7 +1328,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
    public int getDeepChildCount() {
       int total = 0;
       for (IFormElement child : children) {
-         total += child.getDeepChildCount();
+    	  total += child.getDeepChildCount();
       }
       return total;
    }
@@ -2028,7 +1461,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
          }
 
          for (int i = 0; i < selections.size(); i++) {
-            Selection s = (Selection) selections.get(i);
+            Selection s = selections.get(i);
             s.attachChoice(q);
          }
       }
@@ -2177,9 +1610,7 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     * data should be retained.
     */
    public void seal() {
-      triggerablesDAG = null;
-      triggerIndex = null;
-      conditionRepeatTargetIndex = null;
+      dagImpl = null;
       // We may need ths one, actually
       exprEvalContext = null;
    }
@@ -2192,32 +1623,6 @@ public class FormDef implements IFormElement, Localizable, Persistable, IMetaDat
     * @return
     */
 	public IConditionExpr getConditionExpressionForTrueAction(TreeElement instanceNode, int action) {
-		IConditionExpr expr = null;
-		for (int i = 0; i < triggerablesDAG.size() && expr == null; i++) {
-			// Clayton Sims - Jun 1, 2009 : Not sure how legitimate this
-			// cast is. It might work now, but break later.
-			// Clayton Sims - Jun 24, 2009 : Yeah, that change broke things.
-			// For now, we won't bother to print out anything that isn't
-			// a condition.
-			QuickTriggerable qt = triggerablesDAG.get(i);
-			if (qt.t instanceof Condition) {
-				Condition c = (Condition) qt.t;
-
-				if (c.trueAction == action) {
-					ArrayList<TreeReference> targets = c.getTargets();
-					for (int j = 0; j < targets.size() && expr == null; j++) {
-						TreeReference target = targets.get(j);
-
-						TreeReference tr = (TreeReference) (new XPathReference(
-								target)).getReference();
-						TreeElement element = getInstance().getTemplatePath(tr);
-						if (instanceNode == element) {
-							expr = c.getExpr();
-						}
-					}
-				}
-			}
-		}
-		return expr;
+		return dagImpl.getConditionExpressionForTrueAction(getMainInstance(), instanceNode, action); 
 	}
 }
